--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "hardhat-project",
+  "name": "a16z-contracts",
+  "description": "a16z Smart Contract library for Solidity",
+  "version": "0.0.4",
+  "files": [
+    "contracts/**/*.sol"
+  ],
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "arweave": "^1.11.4",
     "chai": "^4.3.6",
     "dotenv": "^16.0.1",
     "ethereum-waffle": "^3.4.4",
@@ -11,6 +17,27 @@
     "hardhat-gas-reporter": "^1.0.8"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.6.0"
-  }
+    "@openzeppelin/contracts": "^4.7.2"
+  },
+  "scripts": {
+    "test": "hardhat test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/a16z/a16z-contracts.git"
+  },
+  "keywords": [
+    "solidity",
+    "ethereum",
+    "smart",
+    "contracts",
+    "a16z",
+    "NFT"
+  ],
+  "author": "a16z crypto",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/a16z/a16z-contracts/issues"
+  },
+  "homepage": "https://github.com/a16z/a16z-contracts#readme"
 }
